# unipac-features

./: Cargo.toml
bins/cli/: Cargo.toml
bins/cli/src/: args.rs  commands.rs  main.rs  style.rs
bins/cli/src/hooks/: mod.rs  pre_install.rs  pre_uninstall.rs  pre_update.rs
bins/cli/src/utils/: mod.rs  spinners.rs  sudo.rs  tabwriter.rs
libs/core/: Cargo.toml
libs/core/src/: constants.rs
libs/macros/: Cargo.toml
libs/macros/src/: lib.rs
libs/managers/: Cargo.toml
libs/managers/src/: lib.rs
libs/managers/src/managers/: aur.rs  cargo.rs  flatpak.rs  mod.rs  pacman.rs  snap.rs
libs/managers/src/utils/: alpm.rs  dirs.rs  mod.rs
