[package]
name = "unipac-cli"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
console = "0.15.8"
dialoguer = "0.11.0"
futures-util = "0.3.30"
indicatif = "0.17.8"
libc = "0.2.153"
once_cell = "1.19.0"
tabwriter = "1.4.0"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1.15"
unipac-macros = { path = "../../libs/macros" }
unipac-managers = { path = "../../libs/managers" }

[features]
pacman = ["unipac-macros/pacman", "unipac-managers/pacman"]
aur = ["unipac-macros/aur", "unipac-managers/aur"]
flatpak = ["unipac-macros/flatpak", "unipac-managers/flatpak"]
snap = ["unipac-macros/snap", "unipac-managers/snap"]
# git = ["unipac-macros/git", "unipac-managers/git"]
cargo = ["unipac-macros/cargo", "unipac-managers/cargo"]
