[package]
name = "unipac-core"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
pacman = []
aur = []
flatpak = []
snap = []
# git = []
cargo = []
